fix: scrollbar width included in title fs

--- a/src/pages/Index/components/MainBanner/styles.module.scss
+++ b/src/pages/Index/components/MainBanner/styles.module.scss
@@ -83,7 +83,7 @@
     --bg-y-move: -42%;
 
     .main-text {
-      font-size: 4vw;
+      font-size: 3.5vw;
       top: 3vw;
       padding: 0 25%;
     }
